src/objects/Template_Event_Unit__c.object
<CustomObject>
    <description>Object for creating a standard set of units associated with event templates</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lag_Days__c</fullName>
        <label>Lag Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Template_Event__r.Start_Date__c + Lag_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template_Event__c</fullName>
        <label>Template Event</label>
        <referenceTo>Template_Event__c</referenceTo>
        <relationshipLabel>Template Event Units</relationshipLabel>
        <relationshipName>Template_Event_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Template Event Units</relationshipLabel>
        <relationshipName>Template_Event_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Event Unit</label>
    <nameField>
        <displayFormat>TEU-{0000000}</displayFormat>
        <label>Template Event Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Event Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>